Fix title alignment.

--- a/src/stories/cards/UnitCard.scss
+++ b/src/stories/cards/UnitCard.scss
@@ -83,7 +83,6 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            line-height: 15px;
 
             > .name {
               font-size: large;
